# ea-half-an-hour

./: .gitignore  README.md
a001-hala-ea/: CMakeLists.txt  README.md
a001-hala-ea/carbin/carbin/: carbin.cmake
a001-hala-ea/halaea/: CMakeLists.txt  shared.cc
a002-hala-ea/: README.md
a002-hala-ea/app/: CMakeLists.txt  carbin_deps.txt
a002-hala-ea/app/cmake/: halaapp_deps.cmake
a002-hala-ea/app/halaapp/: CMakeLists.txt  app.cc
a002-hala-ea/lib/: CMakeLists.txt
a002-hala-ea/lib/halalib/: CMakeLists.txt  hala.cc  hala.h
a003-hala-ea/: CMakeLists.txt  README.md  carbin_deps.txt
a003-hala-ea/halatest/: CMakeLists.txt  add.cc  add.h
a003-hala-ea/tests/: CMakeLists.txt  add_test.cc
a004-hala-restful/: CMakeLists.txt
a004-hala-restful/cmake/: halarest_deps.cmake
a004-hala-restful/halarest/: CMakeLists.txt  restful_server.cc
a005-hala-echo/: CMakeLists.txt  carbin_deps.txt
a005-hala-echo/cmake/: halaecho_deps.cmake
a005-hala-echo/halaecho/: CMakeLists.txt  client.cc  echo.pb.h  echo.proto  server.cc
a006-hala-vue/: CMakeLists.txt  carbin_deps.txt
a006-hala-vue/cache/: README.md  package-lock.json  vue.config.js
a006-hala-vue/cache/src/: App.vue  main.js
a006-hala-vue/cmake/: halavue_deps.cmake
a006-hala-vue/halavue/: CMakeLists.txt  cache.h  cache_service.cc  cache_service.h  restful_server.cc  web_service.cc  web_service.h
a006-hala-vue/www/: index.html  manifest.json  service-worker.js  service-worker.js.map
a006-hala-vue/www/css/: app.c50d199d.css
a006-hala-vue/www/js/: app.26b27e86.js  app.26b27e86.js.map
a008-hala-kv/cache/: README.md  package-lock.json  package.json  vue.config.js
a008-hala-kv/cache/src/: main.js
a008-hala-kv/carbin_cmake/: carbin_module.cmake
a008-hala-kv/halakv/: CMakeLists.txt  cache.cc  cache.h  client.cc  kv_service.cc  kv_service.h  restful_service.cc  restful_service.h  server.cc
a008-hala-kv/www/: service-worker.js.map
a008-hala-kv/www/js/: app.f3bfa96f.js  app.f3bfa96f.js.map  chunk-vendors.7aecad5b.js
a009-hala-dkv/: carbin_deps.txt
a009-hala-dkv/halakv/: CMakeLists.txt  fiber.h  kv_proxy.cc  kv_service.cc  kv_service.h  restful_service.cc  restful_service.h  router_sender.cc  server.cc  web_service.cc  web_service.h
a009-hala-dkv/www/: index.html  service-worker.js
a009-hala-dkv/www/js/: chunk-vendors.7aecad5b.js.map
a010-hala-kv/: CMakeLists.txt  carbin_deps.txt
a010-hala-kv/cmake/: halakv_deps.cmake
a010-hala-kv/halakv/: cache.cc  cache.h  kv.pb.h  kv.proto  kv_proxy.cc  kv_proxy.h  restful_service.cc  restful_service.h  router_sender.h  server.cc
a010-hala-kv/www/: index.html
a010-hala-kv/www/css/: app.52604ff2.css  app.98b88f87.css  chunk-13926520.f05d0674.css  chunk-1720593e.5184116d.css  chunk-1d4e8a46.ef486119.css  chunk-238e0a6e.58dd8455.css  chunk-35e06b6c.ad3047a6.css  chunk-3ac1101a.bbbcd7bb.css  chunk-3d862550.a22c22d7.css  chunk-3e9f4499.8dd279bf.css  chunk-44dd1190.89330d87.css  chunk-5256cf0a.128fb50d.css  chunk-5d096d82.d27b2ac6.css  chunk-6b4caf3e.140c4e4d.css  chunk-761c8e77.90ac6fa0.css  (+7 more)
melon-examples/: CMakeLists.txt  carbin_deps.txt
melon-examples/cmake/: halamelon_deps.cmake
melon-examples/halamelon/: .gitignore  CMakeLists.txt
(+87 files in other folders)
